sfdx-source/unpackaged/main/default/objects/SmartViscaf__NameCardRenkeiJyoken__c/fields/SmartViscaf__BasicSetting__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__BasicSetting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>名刺基本設定</label>
    <referenceTo>SmartViscaf__NameCardBasicSetting__c</referenceTo>
    <relationshipLabel>名刺自動連携条件設定</relationshipLabel>
    <relationshipName>BasicSetting1</relationshipName>
    <type>Lookup</type>
</CustomField>