sfdx-source/unpackaged/main/default/objects/SmartViscaf__NameCardRenkeiJyoken__c/fields/SmartViscaf__NameCardDataType__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__NameCardDataType__c</fullName>
    <label>名刺の項目(データ型)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Url</fullName>
            </value>
            <value>
                <fullName>Textarea</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
                <isActive>false</isActive>
                <label>Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>