sfdx-source/unpackaged/main/default/objects/SmartViscaf__NameCardRenkeiJyoken__c/fields/SmartViscaf__Value__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__Value__c</fullName>
    <label>値</label>
    <type>TextArea</type>
</CustomField>